modules/gdscript/tests/scripts/analyzer/errors/nullable_assignment_to_non_nullable_from_method_return.gd
func _get_result() -> Array[String]?:
    var arr: Array[String]? = null
    return arr

func test():
    var dict: Array[String] = _get_result()
